--- a/django/smartcity/None/mainStyle.css
+++ b/django/smartcity/None/mainStyle.css
@@ -2,6 +2,23 @@ body {
   background-image: url("http://www.technocrazed.com/wp-content/uploads/2015/12/New-York-Wallpaper-Background-2.jpg");
   background-size: cover;
 }
+div.content{
+	position: center;
+	background-color: rgba(0.3,0.3,0.3,0.5);
+	margin-left: 10%;
+	margin-right:10%;
+	}
+div.content.background{
+		opacity: 0.4;
+		}
+table{
+	border: 3px solid black;
+	}
+th,td{
+	border: 1px solid black;
+	color: white;
+	font-family:Verdana;
+	}
 
 h1 {
 	color: white;
