minor styling additions

--- a/django/smartcity/templates/display.html
+++ b/django/smartcity/templates/display.html
@@ -3,8 +3,8 @@
 <br><br>
 <div class="content">
 <table>
-<tr><th>Location Type </th><th>Location Name</th><th>Street Address</th></tr>
-<tr><td>Park</td><td>Davies Park </td>
+<tr><th>Location Type </th><th>Location Name</th><th>Street Address</th><th> Rating </th></tr>
+<tr><td>Park</td><td>Davies Park </td><td> 45 Davies Road, West End </td> <td><b> 3/5 <b></td></tr>
 
 
 
