--- a/smartcity/mainpage/templates/mainpage.html
+++ b/smartcity/mainpage/templates/mainpage.html
@@ -11,6 +11,13 @@ body {
     overflow: scroll;
 }
 
+h2 {
+    position: absolute;
+    left: 500px;
+    color: black;
+
+}
+
 img[type=city] {
     position: absolute;
     top: 50px;
@@ -18,6 +25,7 @@ img[type=city] {
     width: 1500px;
     left: 0px;
     overflow: hidden;
+    z-index: -2
 }
 
 img[type=wood] {
@@ -70,12 +78,33 @@ img[type=wood] {
     z-index: -1;
 }
 
+table {
+    z-index: 2;
+}
+
 
 </style>
 
 </head>
 
 <body>
+
+<table style="width:50%">
+  <tr>
+    <th>College Name</th>
+    <th>Address</th>
+    <th>Departments</th>
+    <th>Email</th>
+  </tr>
+  <tr>
+    {% for college in colleges %}
+    <td>{{ college.college_name }}</td>
+    <td>{{ college.address }}</td>
+    <td>{{ college.departments }}</td>
+    <td>{{ college.email }}</td>
+    {% endfor %}
+  </tr>
+</table> 
 
 <div class=box1></div>
 
