Registration operational, CSS updates

--- a/django/smartcity/templates/name.html
+++ b/django/smartcity/templates/name.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" type="text/css" href="http://127.0.0.1:8000/auth/static/mainStyle.css">
 <body><div class="content">
-<form action="register" method="post">
+<form action="registerpage" method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Submit" />
