--- a/smartcity/mainpage/templates/mainpage.html
+++ b/smartcity/mainpage/templates/mainpage.html
@@ -38,34 +38,118 @@ img[type=wood] {
     z-index: -2;
 }
 
+img[type=university] {
+    position: absolute;
+    top: 600px;
+    left: 100px;
+    width: 150px;
+    overflow: hidden;
+}
+
+img[type=library] {
+    position: absolute;
+    top: 600px;
+    left: 400px;
+    width: 130px;
+    overflow: hidden;
+}
+
+img[type=park] {
+    position: absolute;
+    top: 600px;
+    left: 400px;
+    width: 130px;
+    overflow: hidden;
+}
+
+img[type=Zoo] {
+    position: absolute;
+    top: 600px;
+    left: 400px;
+    width: 130px;
+    overflow: hidden;
+}
+
+img[type=museum] {
+    position: absolute;
+    top: 600px;
+    left: 400px;
+    width: 130px;
+    overflow: hidden;
+}
+
+img[type=restaurant] {
+    position: absolute;
+    top: 600px;
+    left: 400px;
+    width: 130px;
+    overflow: hidden;
+}
+
+img[type=mall] {
+    position: absolute;
+    top: 600px;
+    left: 400px;
+    width: 130px;
+    overflow: hidden;
+}
+
 .box1 {
   	position: absolute;
-  	left:100px;
+  	left:5%;
   	top: 500px;
-    width:300px;
-    height:470px;
+    width:200px;
+    height:300px;
     background-color: white;
     z-index: -1;
+}
+
+.boxheader1 {
+    position: absolute;
+    left:5%;
+    top: 500px;
+    width:200px;
+    height:50px;
+    background-color: green;
 }
 
 .box2 {
     position: absolute;
-    left:570px;
+    left:25%;
     top: 500px;
-    width:300px;
-    height:470px;
+    width:200px;
+    height:300px;
     background-color: white;
     z-index: -1;
 }
 
+.boxheader2 {
+    position: absolute;
+    left:25%;
+    top: 500px;
+    width:200px;
+    height:50px;
+    background-color: green;
+}
+
 .box3 {
     position: absolute;
-    left:1020px;
+    left: 45%;
     top: 500px;
-    width:300px;
-    height:470px;
+    width:200px;
+    height:300px;
     background-color: white;
     z-index: -1;
+    border-color: black;
+}
+
+.boxheader3 {
+    position: absolute;
+    left:45%;
+    top: 500px;
+    width:200px;
+    height:50px;
+    background-color: green;
 }
 
 .navbar {
@@ -78,8 +162,36 @@ img[type=wood] {
     z-index: -1;
 }
 
-table {
-    z-index: 2;
+button[type=colleges] {
+    position: absolute;
+    left:5%;
+    top: 500px;
+    width:200px;
+    text-decoration: none;
+    color: white;
+    font-family: Verdana;
+    background-color: green;
+    padding: 14px 20px;
+    border: none;
+    cursor: pointer;
+    font-size: 20px;
+
+}
+
+button[type=libraries] {
+    position: absolute;
+    left:25%;
+    top: 500px;
+    width:200px;
+    text-decoration: none;
+    color: white;
+    font-family: Verdana;
+    background-color: green;
+    padding: 14px 20px;
+    border: none;
+    cursor: pointer;
+    font-size: 20px;
+
 }
 
 
@@ -89,34 +201,35 @@ table {
 
 <body>
 
-<table style="width:50%">
-  <tr>
-    <th>College Name</th>
-    <th>Address</th>
-    <th>Departments</th>
-    <th>Email</th>
-  </tr>
-  <tr>
-    {% for college in colleges %}
-    <td>{{ college.college_name }}</td>
-    <td>{{ college.address }}</td>
-    <td>{{ college.departments }}</td>
-    <td>{{ college.email }}</td>
-    {% endfor %}
-  </tr>
-</table> 
-
 <div class=box1></div>
+
+<div class=boxheader1></div>
 
 <div class=box2></div>
 
+<div class=boxheader2></div>
+
 <div class=box3></div>
+
+<div class=boxheader3></div>
 
 <div class=navbar></div>
 
 <img type="city"; src="https://broadwayadvancezh.files.wordpress.com/2016/09/manhattan-wallpaper-41.jpg?w=1400&h=400&crop=1">
 
 <img type="wood"; src="http://3.bp.blogspot.com/-3UIjuTrbAI8/Uihk5uaH_lI/AAAAAAAAAuk/gcn5XlQ9kyI/s640/Top+10+best+Simple+Awesome+Background+Images+for+Your+Website+or+Blog2.jpg">
+
+<img type="university"; src="https://icon-icons.com/icons2/510/PNG/512/university_icon-icons.com_49967.png">
+
+<img type="library"; src="https://d30y9cdsu7xlg0.cloudfront.net/png/9280-200.png">
+
+<div class="colleges">
+  <button onclick="window.location.href='/colleges';" type="colleges">Colleges</button>
+</div>
+
+<div class="libraries">
+  <button onclick="window.location.href='/libraries';" type="libraries">Libraries</button>
+</div>
 
 </body>
 </html>
