--- a/smartcity/mainpage/templates/mainpage.html
+++ b/smartcity/mainpage/templates/mainpage.html
@@ -49,31 +49,7 @@ img[type=university] {
 img[type=library] {
     position: absolute;
     top: 600px;
-    left: 400px;
-    width: 130px;
-    overflow: hidden;
-}
-
-img[type=park] {
-    position: absolute;
-    top: 600px;
-    left: 400px;
-    width: 130px;
-    overflow: hidden;
-}
-
-img[type=Zoo] {
-    position: absolute;
-    top: 600px;
-    left: 400px;
-    width: 130px;
-    overflow: hidden;
-}
-
-img[type=museum] {
-    position: absolute;
-    top: 600px;
-    left: 400px;
+    left: 375px;
     width: 130px;
     overflow: hidden;
 }
@@ -81,15 +57,39 @@ img[type=museum] {
 img[type=restaurant] {
     position: absolute;
     top: 600px;
-    left: 400px;
+    left: 640px;
+    width: 130px;
+    overflow: hidden;
+}
+
+img[type=park] {
+    position: absolute;
+    top: 600px;
+    left: 920px;
+    width: 130px;
+    overflow: hidden;
+}
+
+img[type=Zoo] {
+    position: absolute;
+    top: 600px;
+    left: 1170px;
+    width: 130px;
+    overflow: hidden;
+}
+
+img[type=museum] {
+    position: absolute;
+    top: 950px;
+    left: 510px;
     width: 130px;
     overflow: hidden;
 }
 
 img[type=mall] {
     position: absolute;
-    top: 600px;
-    left: 400px;
+    top: 950px;
+    left: 780px;
     width: 130px;
     overflow: hidden;
 }
@@ -140,7 +140,6 @@ img[type=mall] {
     height:300px;
     background-color: white;
     z-index: -1;
-    border-color: black;
 }
 
 .boxheader3 {
@@ -152,6 +151,81 @@ img[type=mall] {
     background-color: green;
 }
 
+.box4 {
+    position: absolute;
+    left: 65%;
+    top: 500px;
+    width:200px;
+    height:300px;
+    background-color: white;
+    z-index: -1;
+}
+
+.boxheader4 {
+    position: absolute;
+    left:65%;
+    top: 500px;
+    width:200px;
+    height:50px;
+    background-color: green;
+}
+
+.box5 {
+    position: absolute;
+    left: 85%;
+    top: 500px;
+    width:200px;
+    height:300px;
+    background-color: white;
+    z-index: -1;
+}
+
+.boxheader5 {
+    position: absolute;
+    left:85%;
+    top: 500px;
+    width:200px;
+    height:50px;
+    background-color: green;
+}
+
+.box6 {
+    position: absolute;
+    left: 35%;
+    top: 850px;
+    width:200px;
+    height:300px;
+    background-color: white;
+    z-index: -1;
+}
+
+.boxheader6 {
+    position: absolute;
+    left:35%;
+    top: 850px;
+    width:200px;
+    height:50px;
+    background-color: green;
+}
+
+.box7 {
+    position: absolute;
+    left: 55%;
+    top: 850px;
+    width:200px;
+    height:300px;
+    background-color: white;
+    z-index: -1;
+}
+
+.boxheader7 {
+    position: absolute;
+    left:55%;
+    top: 850px;
+    width:200px;
+    height:50px;
+    background-color: green;
+}
 .navbar {
     position: absolute;
     left:0px;
@@ -194,6 +268,85 @@ button[type=libraries] {
 
 }
 
+button[type=restaurant] {
+    position: absolute;
+    left:45%;
+    top: 500px;
+    width:200px;
+    text-decoration: none;
+    color: white;
+    font-family: Verdana;
+    background-color: green;
+    padding: 14px 20px;
+    border: none;
+    cursor: pointer;
+    font-size: 20px;
+
+}
+
+button[type=park] {
+    position: absolute;
+    left:65%;
+    top: 500px;
+    width:200px;
+    text-decoration: none;
+    color: white;
+    font-family: Verdana;
+    background-color: green;
+    padding: 14px 20px;
+    border: none;
+    cursor: pointer;
+    font-size: 20px;
+
+}
+
+button[type=zoo] {
+    position: absolute;
+    left:85%;
+    top: 500px;
+    width:200px;
+    text-decoration: none;
+    color: white;
+    font-family: Verdana;
+    background-color: green;
+    padding: 14px 20px;
+    border: none;
+    cursor: pointer;
+    font-size: 20px;
+
+}
+
+button[type=museum] {
+    position: absolute;
+    left:35%;
+    top: 850px;
+    width:200px;
+    text-decoration: none;
+    color: white;
+    font-family: Verdana;
+    background-color: green;
+    padding: 14px 20px;
+    border: none;
+    cursor: pointer;
+    font-size: 20px;
+
+}
+
+button[type=mall] {
+    position: absolute;
+    left:55%;
+    top: 850px;
+    width:200px;
+    text-decoration: none;
+    color: white;
+    font-family: Verdana;
+    background-color: green;
+    padding: 14px 20px;
+    border: none;
+    cursor: pointer;
+    font-size: 20px;
+
+}
 
 </style>
 
@@ -213,6 +366,22 @@ button[type=libraries] {
 
 <div class=boxheader3></div>
 
+<div class=box4></div>
+
+<div class=boxheader4></div>
+
+<div class=box5></div>
+
+<div class=boxheader5></div>
+
+<div class=box6></div>
+
+<div class=boxheader6></div>
+
+<div class=box7></div>
+
+<div class=boxheader7></div>
+
 <div class=navbar></div>
 
 <img type="city"; src="https://broadwayadvancezh.files.wordpress.com/2016/09/manhattan-wallpaper-41.jpg?w=1400&h=400&crop=1">
@@ -223,12 +392,42 @@ button[type=libraries] {
 
 <img type="library"; src="https://d30y9cdsu7xlg0.cloudfront.net/png/9280-200.png">
 
+<img type="restaurant"; src="https://d30y9cdsu7xlg0.cloudfront.net/png/11637-200.png">
+
+<img type="park"; src="https://d30y9cdsu7xlg0.cloudfront.net/png/12246-200.png">
+
+<img type="zoo"; src="https://cdn3.iconfinder.com/data/icons/nature-tab-bar/512/zoo-512.png">
+
+<img type="museum"; src="http://icons.iconarchive.com/icons/iconsmind/outline/512/Museum-icon.png">
+
+<img type="mall"; src="https://cdn.iconscout.com/public/images/icon/premium/png-512/mall-department-store-shopping-building-345bef5a68fc159c-512x512.png">
+
 <div class="colleges">
   <button onclick="window.location.href='/colleges';" type="colleges">Colleges</button>
 </div>
 
 <div class="libraries">
   <button onclick="window.location.href='/libraries';" type="libraries">Libraries</button>
+</div>
+
+<div class="restaurant">
+  <button onclick="window.location.href='/restaurant';" type="restaurant">Restaurants</button>
+</div>
+
+<div class="park">
+  <button onclick="window.location.href='/park';" type="park">Park</button>
+</div>
+
+<div class="zoo">
+  <button onclick="window.location.href='/zoo';" type="zoo">Zoo</button>
+</div>
+
+<div class="museum">
+  <button onclick="window.location.href='/museum';" type="museum">Museum</button>
+</div>
+
+<div class="mall">
+  <button onclick="window.location.href='/mall';" type="mall">Mall</button>
 </div>
 
 </body>
