simple changes, prep for reversion

--- a/smartcity/dbview/templates/colleges.html
+++ b/smartcity/dbview/templates/colleges.html
@@ -4,8 +4,63 @@
 <title>Smart City</title>
 
 <style>
+body {
+	background-image: url("http://o.homedsgn.com/wp-content/uploads/2011/04/NYC-at-Night-54.jpg");
+	background-size: cover;
+}
+
+h1 {
+  color: white;
+  font-family: Verdana;
+  position: fixed;
+  left: 360px;
+  top: 70px;
+} 
+
+.transparentbox {
+  	position: fixed;
+  	left:300px;
+  	top: 50px;
+    width:800px;
+    height:630px;
+    background-color: black;
+    opacity: 0.6;
+    filter: alpha(opacity=60);
+    z-index: -1;
+    border-radius: 25px;
+}
+
+/* Full-width inputs */
+input[type=text], input[type=password] {
+    width: 300px;
+    padding: 12px 20px;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+/* Add padding to containers */
+.container1 {
+    position: fixed;
+    left: 380px;
+    top: 200px;
+}
+
+/* Add padding to containers */
+.container2 {
+    position: fixed;
+    left: 380px;
+    top: 250px;
+}
+
+/* Add padding to containers */
+.container3 {
+    position: fixed;
+    left: 380px;
+    top: 300px;
+}
 
 </style>
+
 
 </head>
 
