--- a/smartcity/mainpage/templates/navbar.html
+++ b/smartcity/mainpage/templates/navbar.html
@@ -16,10 +16,10 @@ img[type=logo] {
 	overflow:hidden;
 }
 img[type=city] {
+	margin-left:5%;
     top: 153px;
     height: 400px;
-    width: 1500px;
-    left: 0px;
+    width: 90%;
     overflow: hidden;
 	z-index = -1;
 }
@@ -56,7 +56,8 @@ img[type=wood] {
     z-index: -1;
 }
 .navbar {
-    width:1500px;
+    width:90%;
+	margin-left:5%;
     height:50px;
     z-index: 2;
 	-webkit-box-shadow: 10px 10px 5px 5px grey;
@@ -129,6 +130,8 @@ li.dropdown {
   border-radius: 5px;
   outline: none;
   color: #9DBFAF;
+  height:100%;
+  padding:0;
 }</style>
 
 <nav>
@@ -178,4 +181,4 @@ li.dropdown {
 
 {% load staticfiles%}
 
-<img type="logo"; src="{% static "Smart_City_Logo.jpg" %}">
+<!--<img type="logo"; src="{% static "Smart_City_Logo.jpg" %}"> !-->
