Fixed Navbar Functionality

--- a/smartcity/navbar/templates/index.html
+++ b/smartcity/navbar/templates/index.html
@@ -166,7 +166,7 @@ li.dropdown {
 				</a>
 			</li>
 			<li>
-				<a href="<!--{%url 'landingpage:templates:loginpage' %}-->#">
+				<a href="/">
 					Home
 				</a>
 			</li>
