--- a/smartcity/mainpage/templates/navbar.html
+++ b/smartcity/mainpage/templates/navbar.html
@@ -138,12 +138,12 @@ li.dropdown {
 	<div class="navbar">
 		<ul>
 			<li>
-				<a href="/mainpage">
-					About us
+				<a href="/">
+					Login
 				</a>
 			</li>
 			<li>
-				<a href="/loginpage">
+				<a href="/mainpage">
 					Home
 				</a>
 			</li>
