Navbar now implemented mostly site-wide

--- a/smartcity/landingpage/templates/loginpage.html
+++ b/smartcity/landingpage/templates/loginpage.html
@@ -100,7 +100,8 @@ button:hover {
 </head>
  
 <body>
-
+{% load staticfiles%}
+{%include 'navbar.html'%}
 <div class=transparentbox></div>
 <h1>Login to SmartCity</h1>
 <h2>Forgot Your Password?</h2>
