--- a/smartcity/mainpage/templates/navbar.html
+++ b/smartcity/mainpage/templates/navbar.html
@@ -3,7 +3,7 @@
 <style>
 
 body {
-    background-image: url("http://3.bp.blogspot.com/-3UIjuTrbAI8/Uihk5uaH_lI/AAAAAAAAAuk/gcn5XlQ9kyI/s640/Top+10+best+Simple+Awesome+Background+Images+for+Your+Website+or+Blog2.jpg");
+    /* background-image: url("http://3.bp.blogspot.com/-3UIjuTrbAI8/Uihk5uaH_lI/AAAAAAAAAuk/gcn5XlQ9kyI/s640/Top+10+best+Simple+Awesome+Background+Images+for+Your+Website+or+Blog2.jpg"); */
 	background-size: cover;
     height: 1200px;
     overflow: scroll;
@@ -132,7 +132,11 @@ li.dropdown {
   color: #9DBFAF;
   height:100%;
   padding:0;
-}</style>
+}
+input.searchTerm{
+	padding:0px;
+}
+</style>
 
 <nav>
 	<div class="navbar">
