--- a/smartcity/mainpage/templates/mainpage.html
+++ b/smartcity/mainpage/templates/mainpage.html
@@ -226,15 +226,6 @@ img[type=mall] {
     height:50px;
     background-color: green;
 }
-.navbar {
-    position: absolute;
-    left:0px;
-    top: 0px;
-    width:1500px;
-    height:50px;
-    background-color: green;
-    z-index: -1;
-}
 
 button[type=colleges] {
     position: absolute;
@@ -353,7 +344,8 @@ button[type=mall] {
 </head>
 
 <body>
-
+{% load staticfiles%}
+{%include 'navbar.html'%}
 <div class=box1></div>
 
 <div class=boxheader1></div>
