--- a/smartcity/registerpage/templates/registerpage.html
+++ b/smartcity/registerpage/templates/registerpage.html
@@ -62,6 +62,9 @@ input{
 </head>
 
 <body>
+
+{% load staticfiles%}
+{%include 'navbar.html'%}
 <div class=transparentbox>
 <h1>Register with SmartCity</h1>
 
