Login, logout functionality
Interaction and user storing operational

--- a/smartcity/landingpage/templates/loginpage.html
+++ b/smartcity/landingpage/templates/loginpage.html
@@ -105,7 +105,7 @@ button:hover {
 <div class=transparentbox></div>
 <h1>Login to SmartCity</h1>
 <h2>Forgot Your Password?</h2>
-<form action="/login" method="post">
+<form action="login" method="post">
 {% csrf_token %}
 <div class="container1"; id="loginFeatures">
   <input type="text" placeholder="Enter Email" name="uname">
