--- a/smartcity/mainpage/templates/navbar.html
+++ b/smartcity/mainpage/templates/navbar.html
@@ -37,9 +37,6 @@ img[type=wood] {
 	margin-left:5%;
     height:50px;
     z-index: 2;
-	-webkit-box-shadow: 10px 10px 5px 5px grey;
-	-moz-box-shadow:    10px 10px 5px 5px grey;
-	box-shadow:         10px 10px 5px 5px grey;
 }
 
 ul {
@@ -55,11 +52,10 @@ ul {
 
 li {
     float: left;
-	background-color: #7094db;
 }
 
 ul {
-	background-color: #7094db;
+	background-color: #3F3F5F;
 }
 
 li a, .dropbtn {
