--- a/smartcity/registerpage/templates/registerpage.html
+++ b/smartcity/registerpage/templates/registerpage.html
@@ -2,10 +2,9 @@
 <html>
 <head>
 <title>Smart City</title>
-
+<link rel="stylesheet" type="text/css" href="http://127.0.0.1:8000/static/mainStyle.css">
 <style>
 body {
-	background-image: url("http://o.homedsgn.com/wp-content/uploads/2011/04/NYC-at-Night-54.jpg");
 	background-size: cover;
 }
 
