--- a/smartcity/landingpage/templates/loginpage.html
+++ b/smartcity/landingpage/templates/loginpage.html
@@ -108,7 +108,7 @@ button:hover {
 <form action="login" method="post">
 {% csrf_token %}
 <div class="container1"; id="loginFeatures">
-  <input type="text" placeholder="Enter Email" name="uname">
+  <input type="text" placeholder="Enter Username" name="uname">
 </div>
 
 <div class="container2"; id="loginFeatures">
