Update Page Integration

--- a/smartcity/dbview/static/mainStyle.css
+++ b/smartcity/dbview/static/mainStyle.css
@@ -10,6 +10,7 @@ div.content{
 	background-color: rgba(0.3,0.3,0.3,0.5);
 	margin-left: 10%;
 	margin-right:10%;
+	margin-top:4%;
 	}
 div.content.background{
 		opacity: 0.4;
