--- a/smartcity/dbview/templates/libraries.html
+++ b/smartcity/dbview/templates/libraries.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Smart City</title>
-<link rel="stylesheet" type="text/css" href="http://127.0.0.1:8000/static/mainStyle.css">
+<link rel="stylesheet" type="text/css" href="http://jimmybot.xyz:7777/static/mainStyle.css">
 <style>
 
 </style>
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+
+<div class="content">
+
 {% load staticfiles%}
 {%include 'navbar.html'%}
 <table style="width:100%">
