--- a/smartcity/dbview/templates/results.html
+++ b/smartcity/dbview/templates/results.html
@@ -3,7 +3,7 @@
 <head>
 <title>Smart City</title>
 
-<link rel="stylesheet" type="text/css" href="http://127.0.0.1:8000/static/mainStyle.css">
+<link rel="stylesheet" type="text/css" href="http://jimmybot.xyz:7777/static/mainStyle.css">
 
 </head>
 <body>
@@ -24,6 +24,22 @@
     <td>{{ college.address }}</td>
     <td>{{ college.departments }}</td>
     <td>{{ college.email }}</td>
+  </tr>
+  {% endfor %}
+</table> 
+<table style="width:100%">
+  <tr>
+    <th>Library Name</th>
+    <th>Address</th>
+    <th>Phone Number</th>
+    <th>Email</th>
+  </tr>
+  {% for lib in libs %}
+  <tr>
+    <td>{{ lib.library_name }}</td>
+    <td>{{ lib.address }}</td>
+    <td>{{ lib.phone_number }}</td>
+    <td>{{ lib.email }}</td>
   </tr>
   {% endfor %}
 </table> 
