--- a/smartcity/mainpage/templates/mainpage.html
+++ b/smartcity/mainpage/templates/mainpage.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Smart City</title>
-<link rel="stylesheet" type="text/css" href="http://127.0.0.1:8000/static/mainStyle.css">
+<link rel="stylesheet" type="text/css" href="http://jimmybot.xyz:7777/static/mainStyle.css">
 <style>
 body {
 	background-size: cover;
@@ -41,6 +41,9 @@ h3{
 	font-family:Verdana;
 	vertical-align:center;
 	margin-top:0%;
+	-moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 	}
 img[type=wood] {
     height: 750px;
@@ -86,6 +89,7 @@ div.map{
 	width:90%;
 	height:30%;
 	margin-left:5%;
+	z-index:0;
 	}
 
 </style>
