--- a/smartcity/dbview/templates/colleges.html
+++ b/smartcity/dbview/templates/colleges.html
@@ -3,13 +3,12 @@
 <head>
 <title>Smart City</title>
 
-<link rel="stylesheet" type="text/css" href="http://127.0.0.1:8000/static/mainStyle.css">
+<link rel="stylesheet" type="text/css" href="http://jimmybot.xyz:7777/static/mainStyle.css">
 
 </head>
 <body>
 {% load staticfiles%}
 {%include 'navbar.html'%}
-<img type="city"; src="https://broadwayadvancezh.files.wordpress.com/2016/09/manhattan-wallpaper-41.jpg?w=1400&h=400&crop=1">
 
 <div class="content">
 
