--- a/smartcity/landingpage/templates/loginpage.html
+++ b/smartcity/landingpage/templates/loginpage.html
@@ -118,11 +118,10 @@ button:hover {
 <div class="login"; id="loginFeatures">
   <button onclick="window.location.href='/mainpage';" type="login">Login</button>
 </div>
-
-<div class="register"; id="loginFeatures">
-  <button onclick="window.location.href='/registerpage';" type="register">Register</button>
-</div>
 </form>
+<div class="register"; id="loginFeatures">
+  <button onclick="window.location.href='/registerpage'" type="register">Register</button>
+</div>
 </body>
 </html>
 
