--- a/smartcity/mainpage/templates/navbar.html
+++ b/smartcity/mainpage/templates/navbar.html
@@ -31,10 +31,15 @@ img[type=wood] {
     overflow: hidden;
     z-index: -2;
 }
-
+nav{
+position:fixed;
+width:100%;
+left:0px;
+top:0px;
+z-index:12;
+}
 .navbar {
-    width:90%;
-	margin-left:5%;
+    width:100%;
     height:50px;
     z-index: 2;
 }
@@ -126,11 +131,19 @@ input.searchTerm{
 					Home
 				</a>
 			</li>
+			{% if user.is_authenticated %}
+			<li>
+				<a href="/updatepage">
+					Update
+				</a>
+			</li>
+			{% else %}
 			<li>
 				<a href="/registerpage">
 					Register
 				</a>
 			</li>
+			{% endif %}
 			<li class="dropdown">
 				<a href="javascript:void(0)" class="dropbtn">User Types</a>
 					<div class="dropdown-content">
