--- a/smartcity/registerpage/templates/updatepage.html
+++ b/smartcity/registerpage/templates/updatepage.html
@@ -65,14 +65,14 @@ input{
 {% load staticfiles%}
 {%include 'navbar.html'%}
 <div class=transparentbox>
-<h1>Register with SmartCity</h1>
+<h1>Update Your Account Details </h1>
 
 
-<form action="/register" name="RegForm" method="post">
+<form action="/update" name="UpdateForm" method="post">
 {% csrf_token %}
 {{ form.as_p }}
 <p>
-<input type="submit" value="Register Now"></p>
+<input type="submit" value="Update Details"></p>
 </form>
 </div></body>
 </html>
