Moved database to MySQL

--- a/smartcity/mainpage/templates/navbar.html
+++ b/smartcity/mainpage/templates/navbar.html
@@ -170,7 +170,7 @@ input.searchTerm{
 					<form action="/search" name="SearchForm" method="post">
 					{% csrf_token %}
 					<input class="searchTerm" type="text" name="term">
-					<input type="submit" value="Search">
+					<input type="submit" class="searchbutton" value="Search">
 					</form>
 				</li>
 			</div>
