Restructured database field names

--- a/smartcity/dbview/templates/libraries.html
+++ b/smartcity/dbview/templates/libraries.html
@@ -24,7 +24,7 @@
   </tr>
   {% for library in libraries %}
   <tr>
-    <td>{{ library.library_name }}</td>
+    <td>{{ library.name }}</td>
     <td>{{ library.address }}</td>
     <td>{{ library.phone_number }}</td>
     <td>{{ library.email }}</td>
